# mir-android-platform

./: CMakeLists.txt  README.md  cross-compile-chroot.sh  native-compile.sh
cmake/: ABICheck.cmake  FindLibHardware.cmake
debian/: changelog  control  mir-android-tests.install  mir-platform-graphics-android-caf15.install  mir-platform-graphics-android15.install  rules
doc/: android_new_device_bringup.md  android_technical_details.md  building_source_for_arm.md  installing_prebuilt_on_android.md
src/: CMakeLists.txt  wrapper.c
tests/: CMakeLists.txt
tests/include/mir/test/doubles/: mock_renderable.h  null_console_services.h  null_emergency_cleanup_registry.h  stub_display_report.h  stub_renderable.h
tests/mir_test_doubles/: CMakeLists.txt
tests/unit-tests/: CMakeLists.txt
tests/unit-tests/client/: CMakeLists.txt
tools/: .update_package_abis.sh.swp  abi_check.sh  abigail_check.sh  update_package_abis.sh
